force-app/main/default/objects/Portfolio__c/fields/Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Expenditure__c</fullName>
    <label>Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>