force-app/main/default/objects/Portfolio__c/fields/Loan_Principal__c.field-meta.xml
<CustomField>
    <fullName>Loan_Principal__c</fullName>
    <label>Loan Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>