force-app/main/default/objects/Portfolio__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>FD</fullName>
            </value>
            <value>
                <fullName>Dept Funds</fullName>
            </value>
            <value>
                <fullName>Equity Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>