force-app/main/default/objects/Portfolio__c/fields/Saving__c.field-meta.xml
<CustomField>
    <fullName>Saving__c</fullName>
    <label>Saving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>